
Change Log Update (00.00.43)
* 2016-08-21
+ Created Security Table, Model and Dao for storing password and salt hashes
  per user.  This will have a foreign key linked to the user record.
+ Setup the tables in main and tested the dao
+ More updates to the signup process, added date validation
+ Plugged in the encryption hashing for passwords
+ Also Added ESC Sequences for proper CP437 to UTF-8 selection for Terminal Support

Change Log Update (00.00.42)
* 2016-08-19
+ Added Enum to config for standard field lengths for limiting field input
  by the same length through the program without having to hard code in each area.
+ Reworked AnsiProcessor to smart pointer and passes to all modules.  This keeps 
  track of all screen data output so we know locally where the screen's x/y position
  is.  This is important for advanced screen redraws and MCI code parsing of positions 
  on the fly.
+ Completed more work and refining on the new user application
+ Added in initial user database setup on startup and setup for creating new users 
  in the sign up process.
+ Signup process is still a WIP.
+ Also plugged in the ansi processor to the modules, all output should be sent through
  the local screen buffer to we can pick up MCI codes on screens at any point in the scroll
  This allows dynamic lightbar on any screen without hard coding specific positions!

Change Log Update (00.00.41)
* 2016-08-11
+ Reworked inputField to handle pass through data properly.  
+ Reworked so Backspace, Del, and ESC Sequences are not echoed back
+ WIP New User Application

Change Log Update (00.00.40)
* 2016-04-16
+ Updated from PKCS5_PBKDF2 SHA1 to SHA512 for stronger encryption.
+ Also added SHA1 for Salt hashing.

Change Log Update (00.00.39)
* 2016-04-14
+ Added both Initial SHA1 and PKCS5_PBKDF2 password encryption routines
+ Some more testing needed on c++ conversions of hex values.

Change Log Update (00.00.38)
* 2016-04-10